// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`remediation-instructions-filters Renders \`remediation-instructions-filters\` with custom props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Instructions filters
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout wrap"
        >
          <remediation-instructions-filters-list-stub
            closable="true"
            editable="true"
            filters="[object Object]"
          />
        </div>
        <div
          class="layout wrap"
        >
          <button
            class="ml-1 v-btn v-btn--is-elevated v-btn--has-bg theme--light v-size--default primary"
            type="button"
          >
            <span
              class="v-btn__content"
            >
      Add
            </span>
          </button>
        </div>
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`remediation-instructions-filters Renders \`remediation-instructions-filters\` with default props 1`] = `
<div
  class="v-list-group"
>
  <div
    aria-expanded="false"
    class="v-list-group__header v-list-item v-list-item--link theme--light"
    role="button"
    tabindex="0"
  >
    <div
      class="v-list-item__content widget-settings-item-title"
    >
      <div
        class="v-list-item__title validation-header"
      >
          Instructions filters
        <!---->
      </div>
    </div>
    <div
      class="v-list-item__icon v-list-group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon notranslate material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    name="expand-transition"
  >
    <div
      class="v-list-group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <div
          class="layout wrap"
        >
          <remediation-instructions-filters-list-stub
            filters=""
          />
        </div>
        <!---->
      </div>
    </div>
  </transition-stub>
</div>
`;
